--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Guilherme<br />
 						The Analyst</h1>
-						<p>Analyst with 5+ yers leveraging data to improve business.<br /> 
+						<p>Analyst with 5+ years leveraging data to improve business.<br /> 
 							Skilled with Python, Databricks, Metabase, Microsoft Power BI And Excel<a href="https://html5up.net/license"> 
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -58,63 +58,40 @@
 									#Airflow #PostegresSQL #Docker #Metabase
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="image main"><img src="images/weatherAnalytics.jpg" alt="" /></a>
-								<ul class="actions special">
+								<a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="image main"><img src="images/weatherAnalytics.jpg" alt=""> </a>
+								<ul class="actions special"></ul>
 									<li><a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
-						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<h2><a href="#">Weather Analytics Made Simple<br /></a></h2>
-									</header>
-									<a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="image fit"><img src="images/weatherAnalytics.jpg" alt="" /></a>
-									<p>From Data Ingestion to BI Delivery in a Reproducible Environment, Exclusively with Open-Source Tools. <br /> 
-										#Airflow #PostegresSQL #Docker #Metabase</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<article>
-									<header>
-										<h2><a href="#">Weather Analytics Made Simple<br /></a></h2>
-									</header>
-									<a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="image fit"><img src="images/weatherAnalytics.jpg" alt="" /></a>
-									<p>From Data Ingestion to BI Delivery in a Reproducible Environment, Exclusively with Open-Source Tools. <br /> 
-										#Airflow #PostegresSQL #Docker #Metabase</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<article>
-									<header>
-										<h2><a href="#">Weather Analytics Made Simple<br /></a></h2>
-									</header>
-									<a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="image fit"><img src="images/weatherAnalytics.jpg" alt="" /></a>
-									<p>From Data Ingestion to BI Delivery in a Reproducible Environment, Exclusively with Open-Source Tools. <br /> 
-										#Airflow #PostegresSQL #Docker #Metabase</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<article>
-									<header>
-										<h2><a href="#">Weather Analytics Made Simple<br /></a></h2>
-									</header>
-									<a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="image fit"><img src="images/weatherAnalytics.jpg" alt="" /></a>
-									<p>From Data Ingestion to BI Delivery in a Reproducible Environment, Exclusively with Open-Source Tools. <br /> 
-										#Airflow #PostegresSQL #Docker #Metabase</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-							</section>
+							<article class="post featured">
+								<header class="major">
+									<!-- <span class="date">April 25, 2017</span> -->
+									<h2><a href="#">Weather Analytics Made Simple<br />
+									</a></h2>
+									<p>Demonstrating the value of leveraging Brazilian open data for data analysis and machine learning. <br /> 
+									#TimeSeriesAnalysis #MachineLearning #Python #DataAnalytics #OpenData
+									</p>
+								</header>
+								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image main"><img src="/images/fr.jpg" alt=""> </a>
+								<ul class="actions special">
+									<li><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="button large">Full Story</a></li>
+								</ul>
+							</article>
+							<article class="post featured">
+								<header class="major">
+									<!-- <span class="date">April 25, 2017</span> -->
+									<h2><a href="#">Weather Analytics Made Simple<br />
+									</a></h2>
+									<p>Starbucks Offer Acceptance Forecast Model With AWS cloud services. <br /> 
+									#MachineLearning #AWS #DataScience #DataVisualization #AI
+									</p>
+								</header>
+								<a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="image main"><img src="/images/starbucks.jpg" alt=""> </a>
+								<ul class="actions special">
+									<li><a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="button large">Full Story</a></li>
+								</ul>
+							</article>
 
 
 					</div>
