--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								</header>
 								<a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="image main"><img src="images/weatherAnalytics.jpg" alt=""> </a>
 								<ul class="actions special"></ul>
-									<li><a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="button large">Full Story</a></li>
+									<a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
@@ -75,21 +75,22 @@
 								</header>
 								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image main"><img src="/images/fr.jpg" alt=""> </a>
 								<ul class="actions special">
-									<li><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="button large">Full Story</a></li>
+									<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 							<article class="post featured">
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><a href="#">Weather Analytics Made Simple<br />
+									<h2><a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963">Starbucks Offer Acceptance Forecast Model With AWS<br />
 									</a></h2>
-									<p>Starbucks Offer Acceptance Forecast Model With AWS cloud services. <br /> 
+									<p>Leveraging AWS environment to deploy a business forecast model. Deployment made possible by using S3 (Data Storage), Sagemaker (Model Training), Lambda (Model Deployment) and IAM (Security).<br />
+										 <br /> 
 									#MachineLearning #AWS #DataScience #DataVisualization #AI
 									</p>
 								</header>
 								<a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="image main"><img src="/images/starbucks.jpg" alt=""> </a>
 								<ul class="actions special">
-									<li><a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="button large">Full Story</a></li>
+									<a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
