--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 									#TimeSeriesAnalysis #MachineLearning #Python #DataAnalytics #OpenData
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image main"><img src="/images/fr.jpg" alt=""> </a>
+								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image main"><img src="images/rs.png" alt=""> </a>
 								<ul class="actions special">
 									<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="button large">Full Story</a></li>
 								</ul>
