--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 									#MachineLearning #AWS #DataScience #DataVisualization #AI
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="image main"><img src="/images/starbucks.jpg" alt=""> </a>
+								<a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="image main"><img src="/images/rse.png" alt=""> </a>
 								<ul class="actions special">
 									<a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="button large">Full Story</a></li>
 								</ul>
