--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
 									#Airflow #PostegresSQL #Docker #Metabase
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="image main"><img src="images/weatherAnalytics.jpg" alt=""> </a>
+								<a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="image"><img src="images/weatherAnalytics.jpg" height="400" width="auto" alt=""> </a>
+								<ul class="actions special">
+									<li><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="button">Full Story</a></li>
+								</ul>
 							</article>
 
 							<article class="post featured">
@@ -70,7 +73,10 @@
 									#TimeSeriesAnalysis #MachineLearning #Python #DataAnalytics #OpenData
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image main"><img src="images/rs.png" alt=""> </a>
+								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image"><img src="images/occurences.jpg" height="400" width="auto" alt=""> </a>
+								<ul class="actions special">
+									<li><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="button">Full Story</a></li>
+								</ul>
 							</article>
 							<article class="post featured">
 								<header class="major">
@@ -82,8 +88,10 @@
 									#MachineLearning #AWS #DataScience #DataVisualization #AI
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="image main"><img src="/images/rse.png" alt=""> </a>
-
+								<a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="image"><img src="/images/starbucks.jpg" height="400" width="auto" alt=""> </a>
+								<ul class="actions special">
+									<li><a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="button">Full Story</a></li>
+								</ul>
 							</article>
 
 
