--- a/index.html
+++ b/index.html
@@ -84,11 +84,10 @@
 									<h2><a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963">Starbucks Offer Acceptance Forecast Model With AWS<br />
 									</a></h2>
 									<p>Leveraging AWS environment to deploy a business forecast model. Deployment made possible by using S3 (Data Storage), Sagemaker (Model Training), Lambda (Model Deployment) and IAM (Security).<br />
-										 <br /> 
 									#MachineLearning #AWS #DataScience #DataVisualization #AI
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="image"><img src="/images/starbucks.jpg" height="400" width="auto" alt=""> </a>
+								<a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="image"><img src="/images/rse.png" height="400" width="auto" alt=""> </a>
 								<ul class="actions special">
 									<li><a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="button">Full Story</a></li>
 								</ul>
