--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 									#MachineLearning #AWS #DataScience #DataVisualization #AI
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="image fit"><img src="/images/occurences.jpg"  alt=""> </a>
+								<a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="image fit"><img src="/images/aaaaaa.png"  alt=""> </a>
 								<ul class="actions special">
 									<li><a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="button">Full Story</a></li>
 								</ul>
