--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									#Airflow #PostegresSQL #Docker #Metabase
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="image fit"><img src="images/weatherAnalytics.jpg" height="400" width="auto" alt=""> </a>
+								<a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="image"><img src="images/weatherAnalytics.jpg" height="400" width="auto" alt=""> </a>
 								<ul class="actions special">
 									<li><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="button">Full Story</a></li>
 								</ul>
