--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									#Airflow #PostegresSQL #Docker #Metabase
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="image fit"><img src="images/starbucks.jpg" alt=""> </a>
+								<a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="image"><img src="images/weatherAnalytics.jpg" height="400" width="auto" alt=""> </a>
 								<ul class="actions special">
 									<li><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="button">Full Story</a></li>
 								</ul>
@@ -73,25 +73,27 @@
 									#TimeSeriesAnalysis #MachineLearning #Python #DataAnalytics #OpenData
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image fit"><img src="images/2Occ.png" alt=""> </a> 
+								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image fit"><img src="images/occurences.jpg" height="400" width="auto" alt=""> </a>
 								<ul class="actions special">
 									<li><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="button">Full Story</a></li>
 								</ul>
 							</article>
+
 							<article class="post featured">
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963">Starbucks Offer Acceptance Forecast Model With AWS<br />
+									<h2><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d">Federal highways occurrences time series forecasting<br />
 									</a></h2>
-									<p>Leveraging AWS environment to deploy a business forecast model. Deployment made possible by using S3 (Data Storage), Sagemaker (Model Training), Lambda (Model Deployment) and IAM (Security).<br />
-									#MachineLearning #AWS #DataScience #DataVisualization #AI
+									<p>Demonstrating the value of leveraging Brazilian open data for data analysis and machine learning. <br /> 
+									#TimeSeriesAnalysis #MachineLearning #Python #DataAnalytics #OpenData
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="image fit"><img src="/images/3AWS.png" alt=""> </a>
+								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image fit"><img src="images/occurences.jpg" height="400" width="auto" alt=""> </a>
 								<ul class="actions special">
-									<li><a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="button">Full Story</a></li>
+									<li><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="button">Full Story</a></li>
 								</ul>
 							</article>
+	
 
 
 					</div>
