--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 									#TimeSeriesAnalysis #MachineLearning #Python #DataAnalytics #OpenData
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image fit"><img src="images/starbucks.jpg" height="400" width="auto" alt=""> </a>
+								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image"><img src="images/starbucks.jpg" height="400" width="auto" alt=""> </a>
 								<ul class="actions special">
 									<li><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="button">Full Story</a></li>
 								</ul>
@@ -88,7 +88,7 @@
 									#TimeSeriesAnalysis #MachineLearning #Python #DataAnalytics #OpenData
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image fit"><img src="images/occurences.jpg" height="400" width="auto" alt=""> </a>
+								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image"><img src="images/occurences.jpg" height="400" width="auto" alt=""> </a>
 								<ul class="actions special">
 									<li><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="button">Full Story</a></li>
 								</ul>
