--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1>Guilherme<br />
 						The Analyst</h1>
 						<p>Analyst with 5+ years leveraging data to improve business.<br /> 
-							Skilled with Python, Databricks, Metabase, Microsoft Power BI And Excel<a href="https://html5up.net/license"> 
+							Skilled with Python, Databricks, Metabase, Microsoft Power BI And Excel
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
@@ -58,7 +58,7 @@
 									#Airflow #PostegresSQL #Docker #Metabase
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="image"><img src="images/weatherAnalytics.jpg" height="500" width="auto" alt=""> </a>
+								<a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="image fit"><img src="images/weatherAnalytics.jpg" height="500" width="auto" alt=""> </a>
 								<ul class="actions special">
 									<li><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="button">Full Story</a></li>
 								</ul>
@@ -73,7 +73,7 @@
 									#TimeSeriesAnalysis #MachineLearning #Python #DataAnalytics #OpenData
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image"><img src="images/starbucks.jpg" height="400" width="auto" alt=""> </a>
+								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image fit"><img src="images/starbucks.jpg" height="400" width="auto" alt=""> </a>
 								<ul class="actions special">
 									<li><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="button">Full Story</a></li>
 								</ul>
@@ -88,7 +88,7 @@
 									#TimeSeriesAnalysis #MachineLearning #Python #DataAnalytics #OpenData
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image"><img src="images/occurences.jpg" height="400" width="auto" alt=""> </a>
+								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image fit"><img src="images/occurences.jpg" height="400" width="auto" alt=""> </a>
 								<ul class="actions special">
 									<li><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="button">Full Story</a></li>
 								</ul>
