--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
 							<article class="post featured">
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d">Federal highways occurrences time series forecasting<br />
+									<h2><a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963">Starbucks Offer Acceptance Forecast Model With AWS<br />
 									</a></h2>
-									<p>Demonstrating the value of leveraging Brazilian open data for data analysis and machine learning. <br /> 
+									<p>Leveraging AWS environment to deploy a business forecast model for Starbucks offer acceptance. Main services used were S3 (storage), Lambda (interactions with endpoints), IAM (security) and Sagemaker (model training). <br />
 									#TimeSeriesAnalysis #MachineLearning #Python #DataAnalytics #OpenData
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image fit"><img src="images/starbucks.jpg" max-height="100%" width="auto" alt=""> </a>
+								<a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="image fit"><img src="images/starbucks.jpg" max-height="100%" width="auto" alt=""> </a>
 								<ul class="actions special">
-									<li><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="button">Full Story</a></li>
+									<li><a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="button">Full Story</a></li>
 								</ul>
 							</article>
 
