--- a/generic.html
+++ b/generic.html
@@ -60,7 +60,7 @@
 									<h2>Professional Experience</h2>
 										<ul>
 											<li> Apr 2024 - Present:  <a href="https://www.yipitdata.com/companies/overview"> <strong>YipitData</strong></a> (Data Consultant)</li> 
-											<li> Mar 2022 - Mar 2024: <a href="https://www.ifood.com.br/"> <strong>iFood</strong></a> (Senior Data Analys)</li>
+											<li> Mar 2022 - Mar 2024: <a href="https://www.ifood.com.br/"> <strong>iFood</strong></a> (Senior Data Analyst)</li>
 											<li> Aug 2019 - Mar 2022: <a href="https://www.ambev.com.br/ "> <strong>Ambev</strong></a> (Business Analytics Coordinator)</li>
 											<li> Feb 2019 - Jul 2019: <a href="https://www.gocase.com.br/ "> <strong>GoCase</strong> (Logistics Intern)</a></li>
 										</ul>
