Adding DuckDb project

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				</ul>
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/guilhermelro/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>				
+					<li><a href="https://github.com/GuilherLRO" class="icon brands fa-github"><span class="label">GitHub</span></a></li>				
 				</ul>
 			</nav>
 					</nav>
@@ -61,6 +61,21 @@
 								<a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="image fit"><img src="images/weatherAnalytics.jpg" max-height="100%" width="auto" alt=""> </a>
 								<ul class="actions special">
 									<li><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="button">Full Story</a></li>
+								</ul>
+							</article>
+
+							<article class="post featured">
+								<header class="major">
+									<!-- <span class="date">April 25, 2017</span> -->
+									<h2><a href="#">Local large datasets analysis with duckDB
+									</a></h2>
+									<p>Leveraging multiple tools to explore many gigabytes of open data from data ingestion to displaying compelling visuals. <br /> 
+									#Data Analysis #Duckdb #Dataviz #Open Data
+									</p>
+								</header>
+								<a href="https://medium.com/@guilherme-oliveira/empowering-local-large-dataset-data-analysis-with-duckdb-case-study-on-brazilian-companies-5cab4c6e8bea" class="image fit"><img src="images/DuckDb.png" max-height="auto" width="auto" alt=""> </a>
+								<ul class="actions special">
+									<li><a href="https://medium.com/@guilherme-oliveira/empowering-local-large-dataset-data-analysis-with-duckdb-case-study-on-brazilian-companies-5cab4c6e8bea" class="button">Full Story</a></li>
 								</ul>
 							</article>
 							
