--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 									#Data Analysis #Duckdb #Dataviz #Open Data
 									</p>
 								</header>
-								<a href="https://medium.com/@guilherme-oliveira/empowering-local-large-dataset-data-analysis-with-duckdb-case-study-on-brazilian-companies-5cab4c6e8bea" class="image fit"><img src="images/duckdb.jpg" max-height="100%" width="auto" alt=""> </a>
+								<a href="https://medium.com/@guilherme-oliveira/empowering-local-large-dataset-data-analysis-with-duckdb-case-study-on-brazilian-companies-5cab4c6e8bea" class="image fit"><img src="images/weatherAnalytics.jpg" max-height="100%" width="auto" alt=""> </a>
 								<ul class="actions special">
 									<li><a href="https://medium.com/@guilherme-oliveira/empowering-local-large-dataset-data-analysis-with-duckdb-case-study-on-brazilian-companies-5cab4c6e8bea" class="button">Full Story</a></li>
 								</ul>
