--- a/generic.html
+++ b/generic.html
@@ -19,7 +19,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo">Guilherme<br /> The Analyst</a>
+					<a href="index.html" class="logo">Guilherme<br /> Guilherme The Data Guy</a>
 				</header>
 
 			<!-- Nav -->
