--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Guilherme<br />
-						The Analyst</h1>
+						Guilherme The Data Guy</h1>
 						<p>Analyst with 5+ years leveraging data to improve business.<br /> 
 							Skilled with Python, Databricks, Metabase, Microsoft Power BI And Excel
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Guilherme<br /> The Analyst</a>
+						<a href="index.html" class="logo">Guilherme<br /> Guilherme The Data Guy</a>
 					</header>
 
 			<!-- Nav -->
