--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Guilherme The Data Guy</title>
+		<title>The Data Guy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Guilherme<br />
-						Guilherme The Data Guy</h1>
+						The Data Guy</h1>
 						<p>Analyst with 5+ years leveraging data to improve business.<br /> 
 							Skilled with Python, Databricks, Metabase, Microsoft Power BI And Excel
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
