--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Guilherme<br /> Guilherme The Data Guy</a>
+						<a href="index.html" class="logo">Guilherme<br />The Data Guy</a>
 					</header>
 
 			<!-- Nav -->
