Updating template style

--- a/index.html
+++ b/index.html
@@ -1,145 +1,141 @@
 <!DOCTYPE HTML>
 <!--
-	Massively by HTML5 UP123
+	Strata by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>The Data Guy</title>
+		<title>Strata by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+		<!-- Header -->
+			<header id="header">
+				<div class="inner">
+					<a href="#" class="image avatar"><img src="images/profile.jpeg" alt="" /></a>
+					<h1><strong>Hi, I am Guilherme !</strong> <br />
+					For more than 5+ years I've been leveraging the power of data and impacting diverse business in different industries.<br />
+					<br />
+				</h1>
+				</div>
+			</header>
 
-				<!-- Intro -->
-					<div id="intro">
-						<h1>Guilherme<br />
-						The Data Guy</h1>
-						<p>Analyst with 5+ years leveraging data to improve business.<br /> 
-							Skilled with Python, Databricks, Metabase, Microsoft Power BI And Excel
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+		<!-- Main -->
+			<div id="main">
+
+				<!-- One -->
+					<section id="one">
+						<header class="major">
+							<h2>Guilherme The Data Guy<br /></h2>
+						</header>
+						<p>Passionate data analyst with experience in the e-commerce, beverages, food delivery and market research industries. On those applied solutions of different complexity levels fiting the needs of each scenario. From automated spreadsheets with Microsoft excel, trough developing reports with tools suach as Power Bi and Tableau to setting up complex data pipelines to serve multiple teams.  </p>
+						<img src="images/MainTools.png" alt="Description of image" style="width: 50%; height: auto;">
+						<ul class="actions">
+							<li><a href="https://drive.google.com/file/d/1ko4yV-kt269AfclckCLW8VLvCXNi0IFT/view?usp=drive_link" class="button">Full Resume</a></li>
 						</ul>
-					</div>
+					</section>
 
-				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo">Guilherme<br />The Data Guy</a>
-					</header>
-
-			<!-- Nav -->
-			<nav id="nav">
-				<ul class="links">
-					<li class="active" ><a href="index.html">Projects</a></li>
-					<li><a href="generic.html">Profile</a></li>
-				</ul>
-				<ul class="icons">
-					<li><a href="https://www.linkedin.com/in/guilhermelro/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/GuilherLRO" class="icon brands fa-github"><span class="label">GitHub</span></a></li>				
-				</ul>
-			</nav>
-					</nav>
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><a href="#">Weather Analytics Made Simple<br />
-									</a></h2>
-									<p>From Data Ingestion to BI Delivery in a Reproducible Environment, Exclusively with Open-Source Tools. <br /> 
-									#Airflow #PostegresSQL #Docker #Metabase
-									</p>
-								</header>
-								<a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="image fit"><img src="images/weatherAnalytics.jpg" max-height="100%" width="auto" alt=""> </a>
-								<ul class="actions special">
-									<li><a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f" class="button">Full Story</a></li>
-								</ul>
+				<!-- Two -->
+					<section id="two">
+						<h2>Recent Work</h2>
+						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/projects/ProjectDuckDb.png" class="image fit thumb"><img src="images/projects/ProjectDuckDb.png" alt="" /></a>
+								<h3><a href="https://medium.com/@guilherme-oliveira/empowering-local-large-dataset-data-analysis-with-duckdb-case-study-on-brazilian-companies-5cab4c6e8bea">Empowering local large dataset data analysis with duckDB</a></h3>
+								<p>#Dataviz #SQL #Python #DuckDB #OpenData</p>
 							</article>
-
-							<article class="post featured">
-								<header class="major">
-									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><a href="#">Local large datasets analysis with duckDB
-									</a></h2>
-									<p>Leveraging multiple tools to explore many gigabytes of open data from data ingestion to displaying compelling visuals. <br /> 
-									#Data Analysis #Duckdb #Dataviz #Open Data
-									</p>
-								</header>
-								<a href="https://medium.com/@guilherme-oliveira/empowering-local-large-dataset-data-analysis-with-duckdb-case-study-on-brazilian-companies-5cab4c6e8bea" class="image fit"><img src="images/duckdb.jpg" max-height="100%" width="auto" alt=""> </a>
-								<ul class="actions special">
-									<li><a href="https://medium.com/@guilherme-oliveira/empowering-local-large-dataset-data-analysis-with-duckdb-case-study-on-brazilian-companies-5cab4c6e8bea" class="button">Full Story</a></li>
-								</ul>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/projects/projectAirflow.png" class="image fit thumb"><img src="images/projects/projectAirflow.png" alt="" /></a>
+								<h3><a href="https://medium.com/@guilherme-oliveira/weather-analytics-made-simple-with-airflow-postgresql-and-metabase-df493ee6ba7f">Weather Analytics Made Simple with Airflow, PostgreSQL, and Metabase</a></h3>
+								<p>#Airflow #Docker #Postgres #Dataviz </p>
 							</article>
-							
-							<article class="post featured">
-								<header class="major">
-									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963">Starbucks Offer Acceptance Forecast Model With AWS<br />
-									</a></h2>
-									<p>Leveraging AWS environment to deploy a business forecast model for Starbucks offer acceptance. Main services used were S3 (storage), Lambda (interactions with endpoints), IAM (security) and Sagemaker (model training). <br />
-									#TimeSeriesAnalysis #MachineLearning #Python #DataAnalytics #OpenData
-									</p>
-								</header>
-								<a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="image fit"><img src="images/starbucks.jpg" max-height="100%" width="auto" alt=""> </a>
-								<ul class="actions special">
-									<li><a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963" class="button">Full Story</a></li>
-								</ul>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/projects/ProjectAWS.png" class="image fit thumb"><img src="images/projects/ProjectAWS.png" alt="" /></a>
+								<h3><a href="https://medium.com/@guilherme-oliveira/starbucks-offer-acceptance-forecast-model-with-aws-7bf0c7a67963">Starbucks Offer Acceptance Forecast Model With AWS</a></h3>
+								<p>#AWS #MachineLearning #Dataviz #Sagemaker</p>
 							</article>
-
-							<article class="post featured">
-								<header class="major">
-									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d">Federal highways occurrences time series forecasting<br />
-									</a></h2>
-									<p>Demonstrating the value of leveraging Brazilian open data for data analysis and machine learning. <br /> 
-									#TimeSeriesAnalysis #MachineLearning #Python #DataAnalytics #OpenData
-									</p>
-								</header>
-								<a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="image fit"><img src="images/occurences.jpg" max-height="100%" width="auto" alt=""> </a>
-								<ul class="actions special">
-									<li><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d" class="button">Full Story</a></li>
-								</ul>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/projects/ProjectDSA.png" class="image fit thumb"><img src="images/projects/ProjectDSA.png" alt="" /></a>
+								<h3><a href="https://medium.com/@guilherme-oliveira/highway-occurrences-time-series-forecasting-from-gov-br-open-data-9570acfc084d">Federal highways occurrences time series forecasting from Gov.br open data</a></h3>
+								<p>#TineSeries #MachineLearning #OpenSource</p>
 							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/projects/projectServer.png" class="image fit thumb"><img src="images/projects/projectServer.png" alt="" /></a>
+								<h3><a href="https://medium.com/gitconnected/creating-a-docker-driven-home-server-experience-on-ubuntu-with-casaos-ab205fbc5a8c">Docker-driven Home Server Experience on Ubuntu with CasaOS</a></h3>
+								<p>#Docker #linux #Database #Airflow</p>
+							</article>
+						</div>
 
-	
+						<!-- <ul class="actions">
+							<li><a href="#" class="button">Full Portfolio</a></li>
+						</ul> -->
+					</section>
 
-
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-						</section>
-						<section class="split contact">
-
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/guilhermelro/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/GuilherLRO" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+				<!-- Three -->
+					<section id="three">
+						<h2>Get In Touch</h2>
+						<!-- <p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p> -->
+						<div class="row">
+							<!-- <div class="col-8 col-12-small">
+								<form method="post" action="#">
+									<div class="row gtr-uniform gtr-50">
+										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
+										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
+										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
+									</div>
+								</form>
+								<ul class="actions">
+									<li><input type="submit" value="Send Message" /></li>
 								</ul>
-							</section>
-						</section>
-					</footer>
-
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
+							</div> -->
+							<div class="col-4 col-12-small">
+								<ul class="labeled-icons">
+									<li>
+										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
+										<!-- 1234 Somewhere Rd.<br /> -->
+										Fortaleza, CE<br />
+										Brasil
+									</li>
+									<li>
+										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
+										+55 85 98880-3266
+									</li>
+									<li>
+										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
+										<a href="mailto:guilhermelro2@gmail.com">guilhermelro2@gmail.com</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</section>
 
 			</div>
 
+		<!-- Footer -->
+		<footer id="footer">
+			<div class="inner">
+				<ul class="icons">
+					<!-- LinkedIn link -->
+					<li><a href="https://www.linkedin.com/in/your-linkedin-profile" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<!-- GitHub link -->
+					<li><a href="https://github.com/GuilherLRO" class="icon brands fa-github"><span class="label">Github</span></a></li>
+					<!-- Email link -->
+					<li><a href="mailto:guilhermelro2@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</div>
+		</footer>
+
+
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
